// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileFieldWrapper renders disabled file input 1`] = `
<fieldset>
  <Label>
    Test File Input
    *
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={true}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        example.
        csv
      </span>
    </Dropzone>
    <Button
      disabled={true}
      onClick={[Function]}
      size="default"
    >
      Choose File
    </Button>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input 1`] = `
<fieldset>
  <Label>
    Test File Input
    *
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        example.
        csv
      </span>
    </Dropzone>
    <Button
      onClick={[Function]}
      size="default"
    >
      Choose File
    </Button>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with error message 1`] = `
<fieldset>
  <Label>
    Test File Input
    *
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        example.
        csv
      </span>
    </Dropzone>
    <Button
      onClick={[Function]}
      size="default"
    >
      Choose File
    </Button>
  </div>
  <Error
    error="Oh no!"
  />
</fieldset>
`;

exports[`FileFieldWrapper renders file input with help message 1`] = `
<fieldset>
  <Label>
    Test File Input
    *
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        example.
        csv
      </span>
    </Dropzone>
    <Button
      onClick={[Function]}
      size="default"
    >
      Choose File
    </Button>
  </div>
  <div>
    Ask Google!
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with selected filename 1`] = `
<fieldset>
  <Label>
    Test File Input
    *
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        test.csv
      </span>
    </Dropzone>
    <Button
      onClick={[Function]}
      size="default"
    >
      Choose File
    </Button>
  </div>
</fieldset>
`;
